refacotr: some refactoring

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Mern app</title>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuMJ3dhADqNoE4tGuWTI3_NlwBihj5BtE&libraries=places"></script>
 </head>
